--- a/webapp/modules/mentor/workbook/workbook.html
+++ b/webapp/modules/mentor/workbook/workbook.html
@@ -202,7 +202,7 @@
 
             <div ng-show="vm.stageVisibility.stage2">
                 <div class="com-list" ng-repeat="item in vm.stagesList.stage2.items">
-                    <div class="com-header clearfix">
+                    <div class="com-header clearfix" ng-click="item.show=!item.show">
                         <div class="pull-left">
                             {{item.title}}</div>
                         <div class="pull-right clearfix">
@@ -218,19 +218,19 @@
                                         <div class="pl-2">
                                             <u>{{$parent.$parent.$index+1}}.{{$parent.$index+1}}.{{$index+1}}</u> {{question.text}} <br>
                                             <div class="row">
-                                                <div class="col" ng-class="{'active':question.answer==1}">
+                                                <div class="col btn-answer" ng-class="{'active':question.answer==1}">
                                                     <div class="bg-white text-center">1</div>
                                                 </div>
-                                                <div class="col" ng-class="{'active':question.answer==2}">
+                                                <div class="col btn-answer" ng-class="{'active':question.answer==2}">
                                                     <div class="bg-white text-center">2</div>
                                                 </div>
-                                                <div class="col" ng-class="{'active':question.answer==3}">
+                                                <div class="col btn-answer" ng-class="{'active':question.answer==3}">
                                                     <div class="bg-white text-center">3</div>
                                                 </div>
-                                                <div class="col" ng-class="{'active':question.answer==4}">
+                                                <div class="col btn-answer" ng-class="{'active':question.answer==4}">
                                                     <div class="bg-white text-center">4</div>
                                                 </div>
-                                                <div class="col" ng-class="{'active':question.answer==5}">
+                                                <div class="col btn-answer" ng-class="{'active':question.answer==5}">
                                                     <div class="bg-white text-center">5</div>
                                                 </div>
                                             </div>
@@ -312,7 +312,7 @@
                         <div class="col-4"><b>Knowledge</b> (Provide a narrative of your evidence and experience gained)</div>
                         <div class="col-8"><input readonly disabled type="text" ng-model="item.knowledge" /></div>
                     </div>
-                    <div class="row"> 
+                    <div class="row">
                         <div class="col-4"><b>Skills</b> (Document the skills you gained through this experience)</div>
                         <div class="col-8"><input readonly disabled type="text" ng-model="item.skills" /></div>
                     </div>
@@ -342,7 +342,44 @@
                 </div>
             </div>
 
-            <div ng-show="vm.stageVisibility.stage5">5</div>
+            <div ng-show="vm.stageVisibility.stage5">
+                <div class="row form-group align-items-center">
+                    <div class="col">Mentee Name</div>
+                    <div class="col"><input ng-readonly="vm.stagesList.stage5.rights.mentor.readOnly" class="form-control" type="text" ng-model="vm.stagesList.stage5.mentor.mentee_name"/></div>
+                </div>
+                <div class="row form-group align-items-center">
+                    <div class="col">Mentee Role</div>
+                    <div class="col"><input ng-readonly="vm.stagesList.stage5.rights.mentor.readOnly" class="form-control" type="text" ng-model="vm.stagesList.stage5.mentor.mentee_role" /></div>
+                </div>
+                <div class="row form-group align-items-center">
+                    <div class="col">Mentor Name</div>
+                    <div class="col"><input ng-readonly="vm.stagesList.stage5.rights.mentor.readOnly" class="form-control" type="text" ng-model="vm.stagesList.stage5.mentor.mentor_name" /></div>
+                </div>
+                <div class="row form-group align-items-center">
+                    <div class="col">Mentor Role</div>
+                    <div class="col"><input ng-readonly="vm.stagesList.stage5.rights.mentor.readOnly" class="form-control" type="text" ng-model="vm.stagesList.stage5.mentor.mentor_role" /></div>
+                </div>
+                <div class="row form-group align-items-center">
+                    <div class="col">Additional Comments</div>
+                    <div class="col"><textarea ng-readonly="vm.stagesList.stage5.rights.mentor.readOnly" class="form-control" type="text" ng-model="vm.stagesList.stage5.mentor.comments"></textarea></div>
+                </div>
+                <div class="row form-group align-items-center" ng-repeat="item in vm.stagesList.stage5.mentor.questions">
+                    <div class="col">{{item.text}}</div>
+                    <div class="col">
+                        <select class="form-control" ng-readonly="vm.stagesList.stage5.rights.mentor.readOnly" ng-disabled="vm.stagesList.stage5.rights.mentor.readOnly" ng-model="item.answer">
+                            <option value="" readonly disabled selected>-- select --</option>
+                            <option value="Strongly Disagree">Strongly Disagree</option>
+                            <option value="Disagree">Disagree</option>
+                            <option value="Neutral">Neutral</option>
+                            <option value="Agree">Agree</option>
+                            <option value="Strongly Agree">Strongly Agree</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="text-right">
+                     <button ng-if="vm.stagesList.stage5.rights.mentor.readOnly == 0 && vm.stagesList.stage5.rights.mentee.readOnly == 1" type="submit" class="btn btn-primary" ng-click="vm.saveStage(5);">Submit</button>
+                </div>
+            </div>
         </form>
 
     </div>
