--- a/webapp/modules/register/register.html
+++ b/webapp/modules/register/register.html
@@ -23,10 +23,10 @@
                             <input type="email" class="form-control" placeholder="Email" ng-model="vm.formData.email" required />
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Password" ng-model="vm.formData.password" required />
+                            <input type="password" class="form-control" placeholder="Password" ng-model="vm.formData.password" required />
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Confirm Password" ng-model="vm.formData.cpassword" required />
+                            <input type="password" class="form-control" placeholder="Confirm Password" ng-model="vm.formData.cpassword" required />
                         </div>
                         <div class="form-group text-center">
                             <md-radio-group ng-model="vm.formData.userType">
