--- a/webapp/modules/register/register.html
+++ b/webapp/modules/register/register.html
@@ -36,9 +36,8 @@
                         </div>
                         <div class="form-group" ng-show="vm.formData.userType == 2">
                             <select ng-model="vm.formData.mentorId" class="form-control">
-                                <option value="" disabled>Select your mentor</option>
-                                <option value="0">Independent Mentee</option>
-                                <option ng-repeat="mentor in vm.mentorList" value="{{mentor.uid}}">{{mentor.fullname}}</option>
+                                <option value="" disabled>Select your mentor</option>                               
+                                <option ng-repeat="mentor in vm.mentorList" value="{{mentor.menteedDetails}}">{{mentor.fullname}}</option>
                             </select>
                         </div>
                         <div class="form-group text-center" ng-show="vm.regoErr">
