--- a/webapp/modules/mentee/workbook/workbook.html
+++ b/webapp/modules/mentee/workbook/workbook.html
@@ -399,9 +399,11 @@
                     </div>
                 </div>
                 <div>
+                    <div ng-repeat="file in vm.stagesList.stage4.files">
+                        <a href="{{file.path}}">{{file.name}}</a>
+                    </div>
                     <form action="upload.php" method="post" enctype="multipart/form-data">
-                      <input name="upload[]" type="file" onchange="angular.element(this).scope().vm.onFileSelect(this)" />                     
-                      <input type="submit" value="Send files" />
+                        <input name="upload" id="evidence-upload" type="file" onchange="angular.element(this).scope().vm.onFileSelect(this)" />
                     </form>
                 </div>
                 <div class="text-right">
