--- a/webapp/modules/base/base.html
+++ b/webapp/modules/base/base.html
@@ -24,4 +24,5 @@
 
 <footer class="text-center">
     <small>Copyright © ADHERE 2018</small>
+    <small class="pull-right mr-2" ng-if="vm.appConfig.version">v{{vm.appConfig.version}}</small>
 </footer>
