--- a/webapp/modules/mentee/workbook/workbook.html
+++ b/webapp/modules/mentee/workbook/workbook.html
@@ -232,7 +232,9 @@
                         <div class="com-question-set" ng-repeat="section in item.section" ng-init="item.show=false;" ng-show="item.show">
                             <div class="com-question">
                                 <div>
-                                    <b>{{$parent.$index+1}}.{{$index+1}}. {{section.heading}}</b>
+                                    <b class="mr-2">{{$parent.$index+1}}.{{$index+1}}. {{section.heading}}</b>
+                                    <span ng-if='section.lop == "Essential"' class="badge bg-info">{{section.lop}}</span>
+                                    <span ng-if='section.lop == "Enhanced"' class="badge bg-danger">{{section.lop}}</span>
                                     <div ng-repeat="question in section.questions">
                                         <div class="pl-2">
                                             <u>{{$parent.$parent.$index+1}}.{{$parent.$index+1}}.{{$index+1}}</u> {{question.text}} <br>
@@ -260,6 +262,13 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div>
+                    Select which competency you would like to obtain from Adhere?
+                    <select ng-model="vm.stagesList.stage2.lop" ng-disabled="vm.stagesList.stage2.rights.mentee.readOnly">
+                                <option value="Essential" selected>Essential</option>
+                                <option value="Enhanced">Enhanced</option>
+                        </select>
                 </div>
                 <div class="text-right">
                     <button ng-show="!vm.stagesList.stage2.rights.mentee.readOnly" type="submit" class="btn btn-primary" ng-click="vm.saveStage(2);">Submit</button>
@@ -332,7 +341,7 @@
                     </div>
                 </div>
                 <div class="text-right">
-                    <button class="btn btn-danger mr-1" ng-click="vm.addSummary();" ng-hide="vm.stagesList.stage4.rights.mentor.readOnly">Add Evidence</button>
+                    <button class="btn btn-danger mr-1" ng-click="vm.addSummary();" ng-hide="vm.stagesList.stage4.rights.mentee.readOnly">Add Evidence</button>
                     <button class="btn btn-sm mr-1" ng-click="vm.openAllAccordion('es',true)">Open All</button>
                     <button class="btn btn-sm" ng-click="vm.openAllAccordion('es',false)">Close All</button>
                 </div>
